--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
 	</head>
 	<body>
 	<a href="supersmashflash">Super Smash Flash</a>
+	<a href="gunmayhem2">Super Smash Flash</a>
+	<a href="raze3">Super Smash Flash</a>
+	<a href="earntodie2">Super Smash Flash</a>
+
 	</body>
 </html>
