--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 	<a href="gunmayhem2">Super Smash Flash</a>
 	<a href="raze3">Super Smash Flash</a>
 	<a href="earntodie2">Super Smash Flash</a>
-
+	<a href="/lemonade-stand/0-lemonade-stand">lemonade stand game</a>
 	</body>
 </html>
