--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 		<title>Games frfr</title>
 	</head>
 	<body>
-	<a href="supersmashflash">Super Smash Flash</a>
-	<a href="gunmayhem2">Super Smash Flash</a>
-	<a href="raze3">Super Smash Flash</a>
-	<a href="earntodie2">Super Smash Flash</a>
+	<a href="supersmashflash">Super Smash Flash</a><br>
+	<a href="gunmayhem2">Gun Mayhem 2</a><br>
+	<a href="raze3">Raze 3</a><br>
+	<a href="earntodie2">Earn to Die 2 frfr</a><br>
 	<a href="/lemonade-stand/0-lemonade-stand">lemonade stand game</a>
 	</body>
 </html>
