--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 	<head>
 		<link rel="stylesheet" href="css/main.css">
 		<title>Games frfr</title>
 	</head>
 	<body>
-	<a href="supersmashflash">Super Smash Flash</a><br>
-	<a href="gunmayhem2">Gun Mayhem 2</a><br>
-	<a href="raze3">Raze 3</a><br>
-	<a href="earntodie2">Earn to Die 2 frfr</a><br>
-	<a href="/lemonade-stand/0-lemonade-stand">lemonade stand game</a>
+	<div>
+	<a href="supersmashflash"><img src="images/logos/ssflogo.jpeg"><br>Super Smash Flash 1</a>
+	</div>
+	<div>
+	<a href="gunmayhem2"><img src="images/logos/gm2logo.jpeg"><br> Mayhem 2</a>
+	</div>
+	<div>
+	<a href="raze3"><img src="images/logos/raze3logo.jpeg"><br>Raze 3</a>
+	</div>
+	<div>
+	<a href="earntodie2"><img src="images/logos/etd2logo.jpeg"><br>Earn to Die 2 frfr</a>
+	</div>
+	<div>
+	<a href="/lemonade-stand/0-lemonade-stand"><span style="font-size: 200%;">(I GOT NO IMG)</span> <br>lemonade stand game</a>
+	</div>
 	</body>
 </html>
