--- a/supersmashflash/index.html
+++ b/supersmashflash/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-  <script src="./ruffle.js"></script>
+  <script src="../ruffle.js"></script>
     <object width="100%" height="auto"></object>
 <embed src="./supersmashflash.swf" width="100%" height="auto"></embed>
   </body>
