--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
 	<div>
 	<a href="/lemonade-stand/0-lemonade-stand"><span style="font-size: 200%;">(I GOT NO IMG)</span> <br>lemonade stand game</a>
 	</div>
+	<div>
+	<a href="slope"><img src="images/logos/slope.jpeg"><br>Earn to Die 2 frfr</a>
+	</a>
 	</body>
 </html>
